--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property='og:title' content='React App - Devan Isaac'/>
+    <meta property='og:image' content='%PUBLIC_URL%/website.jpg'/>
+    <meta property='og:description' content='My Personal website'/>
+    <meta property='og:url' content='%PUBLIC_URL%'/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
